@@ -6,7 +6,7 @@ CC65_CFG=/usr/local/share/cc65/cfg/
 FRANNY=/usr/local/franny/bin/franny
 XXD=/usr/bin/xxd
 
-VERSION=2015_10_02_alpha
+VERSION=2015_10_11_alpha
 
 .PHONY: all clean release release-clean run run-xex
 
@@ -23,6 +23,11 @@ clean:
 	-rm gemdrop.atr.in
 	-rm gemdrop.map
 	-rm gemdrop-font.h
+	-rm title-font.h
+	-rm data/generated/title1.fnt
+	-rm data/generated/title2.fnt
+	-rm tools/title-to-font
+	-rm tools/title-to-font.o
 	-rm tools/fonts-to-h
 	-rm tools/fonts-to-h.o
 
@@ -58,11 +63,21 @@ lib/sound.o:	lib/sound.s
 
 gemdrop.s:	gemdrop.c \
 		gemdrop-font.h \
+		title-font.h \
 		lib/sound.h
 	cc65 -I "${CC65_INC}" -D VERSION="\"${VERSION}\"" -t atari gemdrop.c
 
 gemdrop-font.h:	data/gemdrop1.fnt data/gemdrop2.fnt tools/fonts-to-h
-	tools/fonts-to-h data/gemdrop1.fnt data/gemdrop2.fnt gemdrop-font.h
+	tools/fonts-to-h --merge data/gemdrop1.fnt data/gemdrop2.fnt gemdrop-font.h
+
+title-font.h:	data/generated/title1.fnt data/generated/title2.fnt tools/fonts-to-h
+	tools/fonts-to-h data/generated/title1.fnt data/generated/title2.fnt title-font.h
+
+data/generated/title1.fnt:	tools/title-to-font data/source/gemdrop_deluxe.png
+	tools/title-to-font 1
+
+data/generated/title2.fnt:	tools/title-to-font data/source/gemdrop_deluxe.png
+	tools/title-to-font 2
 
 lib/sound.s:	lib/sound.c \
 		lib/sound.h
@@ -92,4 +107,10 @@ tools/fonts-to-h:     tools/fonts-to-h.o
 
 tools/fonts-to-h.o:   tools/fonts-to-h.c
 	$(CC) $(CFLAGS) tools/fonts-to-h.c -c -o tools/fonts-to-h.o
+
+tools/title-to-font:     tools/title-to-font.o
+	$(CC) $(CFLAGS) $(LDFLAGS) tools/title-to-font.o -o tools/title-to-font
+
+tools/title-to-font.o:   tools/title-to-font.c
+	$(CC) $(CFLAGS) tools/title-to-font.c -c -o tools/title-to-font.o
 
