@@ -2,6 +2,7 @@
 #include <stdlib.h>
 #include <libgen.h>
 #include <ctype.h>
+#include <string.h>
 
 void convert(FILE * fi, FILE * fo, int not_last) {
   int i;
@@ -30,7 +31,6 @@ void merge(FILE * fi1, FILE * fi2, FILE * fo, int not_last) {
     c1 = fgetc(fi1);
     c2 = fgetc(fi2);
 
-    /* FIXME: Dither c1 & c2 into c */
     toggle2 = !toggle2;
     if (toggle2) {
       toggle = !toggle;
@@ -58,69 +58,96 @@ void merge(FILE * fi1, FILE * fi2, FILE * fo, int not_last) {
 
 int main(int argc, char * argv[]) {
   FILE * fi, * fi2, * fo;
-  char h_name[256];
-  int i;
+  char h_name[256], ary_name[256];
+  int i, opt_merge, font_len;
 
-  if (argc < 4) {
-    fprintf(stderr, "Usage: %s font1.fnt font2.fnt output.h\n", argv[0]);
+  /* Command-line */
+  if (argc < 3 || argc > 5) {
+    fprintf(stderr, "Usage: %s [--merge] font1.fnt [font2.fnt] output.h\n", argv[0]);
     exit(1);
   }
 
-  fo = fopen(argv[3], "w");
+  if (argc == 3) {
+    font_len = 1024;
+  } else if (argc == 4) {
+    font_len = 1024 * 2;
+  }
+
+  opt_merge = 0;
+  if (strstr(argv[1], "--") == argv[1]) {
+    if (strcmp(argv[1], "--merge") == 0 && argc == 5) {
+      opt_merge = 1;
+      font_len = 1024 * 3;
+    } else {
+      fprintf(stderr, "%s --merge ... is only valid option & needs two fonts", argv[0]);
+      exit(1);
+    }
+  }
+
+  /* Open output file */
+  fo = fopen(argv[argc - 1], "w");
   if (fo == NULL) {
-    perror(argv[3]);
+    perror(argv[argc - 1]);
     exit(1);
   }
 
-  snprintf(h_name, sizeof(h_name), "%s", basename(argv[3]));
+  snprintf(h_name, sizeof(h_name), "%s", basename(argv[argc - 1]));
+  snprintf(ary_name, sizeof(ary_name), "%s", basename(argv[argc - 1]));
   for (i = 0; h_name[i] != '\0'; i++) {
     if (isalnum(h_name[i])) {
       h_name[i] = toupper(h_name[i]);
     } else {
+      if (h_name[i] != '.') {
+        ary_name[i] = '_';
+      } else {
+        ary_name[i] = '\0';
+      }
       h_name[i] = '_';
     }
   }
 
   fprintf(fo, "#ifndef %s\n", h_name);
   fprintf(fo, "#define %s\n", h_name);
-  fprintf(fo, "/* gemerated by tools/fonts-to-h */\n");
-  fprintf(fo, "#define FONT_LEN 3072\n");
-  fprintf(fo, "static unsigned char font[] = {\n");
+  fprintf(fo, "/* generated by tools/fonts-to-h */\n");
+  fprintf(fo, "#define %s_LEN %d\n", h_name, font_len);
+  fprintf(fo, "static unsigned char %s[] = {\n", ary_name);
 
-
-  fi = fopen(argv[1], "rb");
+  fi = fopen(argv[1 + opt_merge], "rb");
   if (fi == NULL) {
-    perror(argv[1]);
+    perror(argv[1 + opt_merge]);
     exit(1);
   }
-  fprintf(fo, "/* %s */\n", argv[1]);
+  fprintf(fo, "/* %s */\n", argv[1 + opt_merge]);
   convert(fi, fo, 1);
   fclose(fi);
 
-  fi = fopen(argv[2], "rb");
-  if (fi == NULL) {
-    perror(argv[2]);
-    exit(1);
-  }
-  fprintf(fo, "/* %s */\n", argv[2]);
-  convert(fi, fo, 1);
-  fclose(fi);
+  if (argc > 3) {
+    fi = fopen(argv[2 + opt_merge], "rb");
+    if (fi == NULL) {
+      perror(argv[2 + opt_merge]);
+      exit(1);
+    }
+    fprintf(fo, "/* %s */\n", argv[2 + opt_merge]);
+    convert(fi, fo, 1);
+    fclose(fi);
 
-  fi = fopen(argv[1], "rb");
-  if (fi == NULL) {
-    perror(argv[1]);
-    exit(1);
+    if (opt_merge) {
+      fi = fopen(argv[1 + opt_merge], "rb");
+      if (fi == NULL) {
+        perror(argv[1 + opt_merge]);
+        exit(1);
+      }
+      fi2 = fopen(argv[2 + opt_merge], "rb");
+      if (fi2 == NULL) {
+        perror(argv[2 + opt_merge]);
+        exit(1);
+      }
+      fprintf(fo, "/* %s + %s combined */\n", argv[1 + opt_merge], argv[2 + opt_merge]);
+      merge(fi, fi2, fo, 0);
+      fclose(fi);
+      fclose(fi2);
+    }
   }
-  fi2 = fopen(argv[2], "rb");
-  if (fi2 == NULL) {
-    perror(argv[2]);
-    exit(1);
-  }
-  fprintf(fo, "/* %s + %s combined */\n", argv[1], argv[2]);
-  merge(fi, fi2, fo, 0);
-  fclose(fi);
-  fclose(fi2);
-
 
   fprintf(fo, "};\n");
   fprintf(fo, "#endif /* %s */\n", h_name);
