@@ -2,8 +2,13 @@ CHANGES.txt for Gem Drop Deluxe
 
 WIP:
 
+October 11, 2015
+ * Nicer title screen (WIP)
+
+RELEASE: 2015_10_02_alpha
+
 October 2, 2015
- * WIP: Adding support for non-flickering mode
+ * Adding support for non-flickering mode
 
 RELEASE: 2015_08_15_alpha_1
 
